fixed paragraph spacing on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -125,6 +125,7 @@ main h1 {
   font-family: 'Raleway', sans-serif;
   font-size: 14px;
   color: #FFF;
+  word-wrap: break-word;
 
 }
 .post-container h3 {
@@ -423,15 +424,16 @@ footer ul, .cats-footer ul {
   }
   
   .image-and-blurb {
-    display: inline;      
+    display: inline;   
 
   }
   .blub {
     width: auto;
     margin-left: auto;
     margin-right: auto;
+    word-wrap: break-word;
   }
-  .about-container {
+  .about-container, .post-container {
     background-color: rgba(51, 51, 51, .9);
 
     margin-bottom: 200px;
